<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.0.3</version>
		<relativePath/>
	</parent>

	<groupId>com.shahabkondri</groupId>
	<artifactId>chat-gpt-cli</artifactId>
	<version>1.0.2-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>chat-gpt-cli</name>
	<description>ChatGPT CLI</description>
	<url>https://github.com/shahabkondri/chat-gpt-cli</url>

	<licenses>
		<license>
			<name>MIT License</name>
			<url>https://www.opensource.org/licenses/mit-license.php</url>
		</license>
	</licenses>

	<developers>
		<developer>
			<name>Shahab Kondri</name>
			<email>shahab.kondri@gmail.com</email>
			<url>https://github.com/shahabkondri</url>
		</developer>
	</developers>

	<scm>
		<connection>scm:git:git://github.com/shahabkondri/chat-gpt-cli.git</connection>
		<developerConnection>scm:git:ssh://github.com:shahabkondri/chat-gpt-cli.git</developerConnection>
		<url>https://github.com/shahabkondri/chat-gpt-cli/tree/master</url>
	</scm>

	<issueManagement>
		<system>GitHub</system>
		<url>https://github.com/shahabkondri/chat-gpt-cli/issues</url>
	</issueManagement>

	<properties>
		<java.version>17</java.version>
		<spring-shell.version>3.0.1</spring-shell.version>

		<spring-javaformat-maven-plugin.version>0.0.35</spring-javaformat-maven-plugin.version>
		<maven-checkstyle-plugin.version>3.2.1</maven-checkstyle-plugin.version>
		<checkstyle.version>10.7.0</checkstyle.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.shell</groupId>
				<artifactId>spring-shell-dependencies</artifactId>
				<version>${spring-shell.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>com.shahabkondri</groupId>
			<artifactId>chat-gpt-api</artifactId>
			<version>1.0.1</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.shell</groupId>
			<artifactId>spring-shell-starter</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-configuration-processor</artifactId>
			<optional>true</optional>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>io.spring.javaformat</groupId>
				<artifactId>spring-javaformat-maven-plugin</artifactId>
				<version>${spring-javaformat-maven-plugin.version}</version>
				<executions>
					<execution>
						<phase>validate</phase>
						<inherited>true</inherited>
						<goals>
							<goal>validate</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>${maven-checkstyle-plugin.version}</version>
				<dependencies>
					<dependency>
						<groupId>com.puppycrawl.tools</groupId>
						<artifactId>checkstyle</artifactId>
						<version>${checkstyle.version}</version>
					</dependency>
					<dependency>
						<groupId>io.spring.javaformat</groupId>
						<artifactId>spring-javaformat-checkstyle</artifactId>
						<version>${spring-javaformat-maven-plugin.version}</version>
					</dependency>
				</dependencies>
				<executions>
					<execution>
						<id>checkstyle-validation</id>
						<phase>validate</phase>
						<inherited>true</inherited>
						<configuration>
							<configLocation>checkstyle.xml</configLocation>
							<includeTestSourceDirectory>true</includeTestSourceDirectory>
						</configuration>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

</project>
